# hkgov-rethink

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEFECTS.md  Dockerfile  EXAMPLES.md  FEATURES_TRACKER.md  LICENSE  README.md  config.toml  netlify.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: alerts.rs  alerts_webhook_deps.rs  analysis.rs  bilingual.rs  brief.rs  cite.rs  identity.rs  insight.rs  investigation.rs  lib.rs  llm.rs  loop_mod.rs  qa.rs  scheduler.rs  signal.rs  silence.rs  tools.rs  unprecedentedness.rs
crates/api/: Cargo.toml
crates/api/src/: auth.rs  error.rs  identity.rs  main.rs  ratelimit.rs  routes.rs  secrets.rs  state.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  model.rs  telemetry.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: datagovhk.rs  hkma.rs  immigration.rs  landregistry.rs  landsd.rs  lib.rs  press.rs  registry.rs  resilience.rs  rvd.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  memory.rs  pg_store.rs  redis_store.rs
dashboard/: index.html  llms.txt
docs/: ARCHITECTURE.md  CAPACITY.md  DATA_SOURCES.md  QA_PHASE1_FEATURES.md  QA_PHASE2_3_TESTS_DEFECTS.md  QA_PHASE5_REGRESSION.md  QA_PHASE6_FINAL_SUMMARY.md  ROADMAP.md
docs/PM_STRATEGY/: NEXT_FEATURE_INTEGRATION_MAPS.md  PHASE_1_FOUNDATION.md  PHASE_2_IDEATION.md  PHASE_3_UX_STORYBOARD.md  PHASE_4_PRD.md  PHASE_5_VALIDATION.md  PRODUCT_STRATEGY_TRACKER.md  README.md
examples/: query_api.py
loadtest/: loadtest.js
python/: .gitignore  README.md  pyproject.toml
python/src/hkgov/: __init__.py  client.py  models.py
python/tests/: conftest.py  test_client.py
scripts/: demo.sh
