[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/connectors",
    "crates/store",
    "crates/ingest",
    "crates/agent",
    "crates/api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/alencheung/hkgov-rethink"
authors = ["alencheung"]
description = "Consolidated, AI-infused insights from Hong Kong Government public data sources."

[workspace.dependencies]
# Async runtime + HTTP
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "stream"] }
tower = { version = "0.5", features = ["limit", "timeout", "retry", "util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "timeout", "set-header"] }
# V-003: per-IP inbound rate limiting. `tower-governor` does not yet support
# axum 0.8's body type, so we drive `governor` directly from a tiny axum
# `from_fn` middleware (see `crate::ratelimit`). `governor` is tower-version-
# agnostic at this layer.
governor = "0.6"
hyper = { version = "1.6", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Caching / concurrency
moka = { version = "0.12", features = ["future"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config / errors / misc
figment = { version = "0.10", features = ["toml", "env"] }
thiserror = "2"
anyhow = "1"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
# Cryptographic hashing for the Cite-It reproducibility manifest (P-101). Used
# to detect upstream data drift — same finding recomputed against current data
# must hash identically, or the cite drawer surfaces a "reproduces as of {ts}"
# warning rather than false-claiming reproducibility.
sha2 = "0.10"
# CSPRNG for security-critical token generation (V-006 fix). Tokens were
# previously SHA-256 over a timestamp + counter — deterministic and forgeable.
# `rand` gives us a proper OS-entropy source for one-time tokens + sessions.
rand = "0.8"
# Constant-time comparison for secret strings (V-011 fix). The API-key guard
# compared the supplied key with `==`, leaking length + prefix via a timing
# side-channel. `subtle` provides `ConstantTimeEq` for byte slices.
subtle = "2"

# Internal crates
hkgov-common = { path = "crates/common" }
hkgov-connectors = { path = "crates/connectors" }
hkgov-store = { path = "crates/store" }
hkgov-ingest = { path = "crates/ingest" }
hkgov-agent = { path = "crates/agent" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
