[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "hkgov-py"
version = "0.1.0"
description = "Typed Python client for hkgov-rethink — AI-infused HKGOV data insights."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "alencheung" }]
keywords = ["hong-kong", "hkma", "open-data", "hkma-api", "insights"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests>=2.28",
    "typing_extensions>=4.4; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/alencheung/hkgov-rethink"
Repository = "https://github.com/alencheung/hkgov-rethink"
Documentation = "https://github.com/alencheung/hkgov-rethink#python-client"
Issues = "https://github.com/alencheung/hkgov-rethink/issues"
Changelog = "https://github.com/alencheung/hkgov-rethink/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "ruff", "mypy", "responses>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/hkgov"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
