[package]
name = "hkgov-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
# Enables the HTTP LLM client (OpenAI-compatible). Off by default so dev/CI
# runs in pure-heuristic mode with no API key.
llm = []

[dependencies]
hkgov-common.workspace = true
hkgov-store.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true
serde_json.workspace = true
