[package]
name = "hkgov-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
# Enables the HTTP LLM client (OpenAI-compatible). Off by default so dev/CI
# runs in pure-heuristic mode with no API key.
llm = ["dep:reqwest"]
# Enables proactive webhook alerting. Off by default; needs reqwest to POST to
# webhooks. The AlertSink trait + AlertDispatcher are available regardless, so
# in-process/test sinks work without this feature.
alerts = ["dep:reqwest"]

[dependencies]
hkgov-common.workspace = true
hkgov-store.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
chrono.workspace = true
thiserror.workspace = true
# SHA-256 for the Cite-It reproducibility manifest (P-101).
sha2.workspace = true
# Only needed by the HTTP LLM client; gated behind the `llm` feature.
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
serde_json.workspace = true
