[package]
name = "hkgov-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "hkgov-api"
path = "src/main.rs"

[dependencies]
hkgov-common.workspace = true
hkgov-connectors.workspace = true
hkgov-store.workspace = true
hkgov-ingest.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
