[package]
name = "hkgov-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "hkgov-api"
path = "src/main.rs"

[features]
default = []
# Passthrough to enable the HTTP LLM client in the agent layer.
llm = ["hkgov-agent/llm"]
# Passthrough to enable proactive webhook alerting in the agent layer.
alerts = ["hkgov-agent/alerts"]

[dependencies]
hkgov-common.workspace = true
hkgov-connectors.workspace = true
hkgov-store.workspace = true
hkgov-ingest.workspace = true
hkgov-agent.workspace = true
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
moka.workspace = true

[dev-dependencies]
chrono.workspace = true
http-body-util = "0.1"
tower.workspace = true
