[package]
name = "hkgov-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
url.workspace = true
