[package]
name = "hkgov-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
# Enables OpenTelemetry trace export (ROADMAP v4). Default exporter is stdout
# (stable, zero-config). Swap to OTLP in telemetry.rs to ship to a collector.
otel = ["dep:opentelemetry", "dep:opentelemetry-stdout", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
figment.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
url.workspace = true

# OTel (optional), pinned to the 0.27 line.
opentelemetry = { version = "0.27", optional = true }
opentelemetry-stdout = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }
