[package]
name = "hkgov-connectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
# Enable tests that hit live HKGOV endpoints (not run in CI).
live = []

[dependencies]
hkgov-common.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
url.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
serde_json.workspace = true
