[package]
name = "hkgov-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
hkgov-common.workspace = true
hkgov-connectors.workspace = true
hkgov-store.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
