[package]
name = "hkgov-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
# Enables the Redis-backed RecordStore (ROADMAP v2 multi-node tier). Off by
# default so the build and CI need no Redis server.
redis = ["dep:redis"]
# Enables the Postgres-backed RecordStore (ROADMAP v4 persistent tier).
pg = ["dep:tokio-postgres"]

[dependencies]
hkgov-common.workspace = true
async-trait.workspace = true
moka.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
redis = { version = "0.27", default-features = false, features = [
    "tokio-comp",
    "connection-manager",
], optional = true }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"], optional = true }
